# ianbot-skill-legal

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.githooks/: pre-commit
bot/: README.md  debug.py  delivery.py  idempotency.py  router.py  schemas.py  telegram_polling.py
bot/adapters/: slack.py  telegram.py
bot/content/: faqs.yaml
bot/handlers/: dispatch.py  echo.py  faq.py  receptionist.py
bot/outbound/: slack_client.py  telegram_client.py
core/: auth.py  bot_db.py  bot_faq.py  bot_receptionist.py  config.py  db.py  drive.py  extract.py  gemini_client.py  version.py
core/prompts/: extract_contract.txt  receptionist.txt
db/: README.md  schema.sql
deploy/: README.md
docs/: DEV.md  RECEPTIONIST_BRANCH.md  apps-script.md
ingest/: api.py  routes.py  schemas.py
scripts/: bump_major.py  bump_minor.py  bump_patch.py  commit-revision.sh  setup-git-hooks.sh  test_drive_sa.py  test_drive_sa2.py  test_ingest.py  version_lib.py  wipe-local-db.sh
tests/: test_api.py  test_bot.py  test_bot_debug.py  test_bot_faq.py  test_bot_receptionist.py  test_drive.py  test_extract.py
