[project]
name = "exp-wonbot-fuzzy-vertex"
version = "0.1.3"
description = "Contract and payment assistant API (wonbot-api)"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ingest*", "bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
